--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "4.8.x",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "neo4j": "^2.0.0-RC2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
