--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node server met API naar mongodb database",
   "main": "server.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/_mocha ./test/*test.js --reporter spec",
+    "test": "nodemon --exec mocha -R min",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -17,11 +17,11 @@
     "mongoose",
     "server"
   ],
-  "author": "Avans Informatica Breda",
-  "license": "ISC",
-  "homepage": "https://github.com/avansbreda#readme",
+  "author": "Jeffry van den Hooven",
+  "license": "",
+  "homepage": "",
   "bugs": {
-    "url": "https://github.com/avansbreda/issues"
+    "url": ""
   },
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -29,9 +29,10 @@
     "express-jwt": "^5.3.0",
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
-    "mongoose": "4.8.x",
+    "mongoose": "^4.13.6",
+    "mongoose-deep-populate": "^3.0.0",
     "morgan": "^1.8.1",
-    "neo4j": "^2.0.0-RC2"
+    "neo4j": "^1.1.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -40,6 +41,6 @@
     "gulp-istanbul": "^1.1.2",
     "gulp-mocha": "^4.3.1",
     "mocha": "^3.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.12.5"
   }
 }
