--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "express": "^4.15.2",
     "express-jwt": "^5.3.0",
     "jwt-simple": "^0.5.1",
-    "moment": "^2.18.1",
+    "moment": "^2.19.4",
     "mongoose": "^4.13.6",
     "mongoose-deep-populate": "^3.0.0",
     "morgan": "^1.8.1",
-    "neo4j": "^1.1.1"
+    "neo4j-driver": "^1.5.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -40,7 +40,7 @@
     "gulp": "^3.9.1",
     "gulp-istanbul": "^1.1.2",
     "gulp-mocha": "^4.3.1",
-    "mocha": "^3.3.0",
+    "mocha": "^3.5.3",
     "nodemon": "^1.12.5"
   }
 }
